# Timer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  launch.vs.json  shared.cmake
.github/workflows/: build.yaml
dumps/lib/tier0/: tier0.lib
game/csgo/addons/cs2surf/gamedata/: cs2surf-core.games.jsonc
game/csgo/cfg/: cs2surf.cfg
game/csgo/cfg/multiaddonmanager/: multiaddonmanager.cfg
src/: cs2surf.cpp  cs2surf.h  pch.h
src/core/: adminmanager.cpp  adminmanager.cppm  adminmanager.h  concmdmanager.cpp  concmdmanager.cppm  core.cpp  core.cppm  core.h  cvarmanager.cppm  cvarmanager.h  eventmanager.cppm  forwards.cpp  forwards.cppm  forwards.h  gamedata.cpp  gamedata.cppm  gamesystem.cpp  gamesystem.cppm  httpmanager.cppm  interfaces.cpp  interfaces.cppm  interfaces.h  logger.cppm  memory.cpp  memory.cppm  memory.h  menu.cpp  menu.cppm  menu.h  playermanager.cppm  playermanager.h  screentext.cpp  screentext.cppm  screentext.h  sdkhook.cpp  sdkhook.cppm  sdkhook.h  soundmanager.cpp  soundmanager.h
src/movement/: movement.h  mv_hooks.cpp
src/sdk/: common.h  datatypes.cpp  datatypes.h  netmessages.h  schema.cpp  schema.h  serversideclient.h  usercmd.h
src/sdk/entity/: cbaseentity.cpp  cbaseentity.h  cbaseplayercontroller.h  cbaseplayerpawn.h  ccollisionproperty.h  ccsplayercontroller.h  ccsplayerpawn.cpp  ccsplayerpawn.h  cgameresourceservice.cpp  observer.h  recipientfilters.cpp  recipientfilters.h  services.h
src/sdk/protobuf/: source2_steam_stats.pb.cc  source2_steam_stats.pb.h
src/sdk/tier0/: circularbuffer.h  mempool.h
src/surf/: api.cpp  api.h  surf_player.cpp  surf_player.h
src/surf/checkpoint/: commands.cpp  menu.cpp  surf_checkpoint.cpp  surf_checkpoint.h
src/surf/global/: prop.cpp  surf_global.cpp  surf_global.h
src/surf/hud/: surf_hud.cpp  surf_hud.h
src/surf/misc/: commands.cpp  events.cpp  maxvelfix.cpp  mvunlock.cpp  rampfix.cpp  showtrigger.cpp  surf_misc.cpp  surf_misc.h
src/surf/misc/fixes/: hammeridfix.cpp  maxvelfix.cpp  rampfix.cpp  slopefix.cpp  ticksimulate.cpp
src/surf/replay/: file.cpp  nonav.cpp  playback.cpp  recorder.cpp  surf_replay.cpp  surf_replay.h
src/surf/zones/: commands.cpp  edit.cpp  edit.h  mapping.cpp  surf_zones.cpp  surf_zones.h
src/utils/: ctimer.cpp  ctimer.h  legacy_basic_string.h  legacy_string.h  utils.cpp  utils.h  vtablehelper.h
